--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@
 .centratura{
   padding: 0 5%;
 }
+.centratura-j{
+  padding-left:5%;
+}
 
 body{
   font-family: 'Poppins', sans-serif;
@@ -16,7 +19,7 @@ body{
 /* CSS HEADER */
 
 header {
-  background-color: #2a4781;
+  background-color: #0d2944;
   height: 400px;
 
 }
@@ -24,7 +27,7 @@ header {
 nav {
   width: 100%;
   height: 60px;
-  background-color: blue;
+  background-color: #0d2944;
   line-height: 60px;
   color: white;
   text-decoration: none;
@@ -58,12 +61,23 @@ nav a {
   /* CSS JUMBO */
 
   .jumbo {
+    position: relative;
     height: 340px;
     background-image: url("../img/fluentify-jumbo.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
   }
+
+  .jumbo-title {
+    width: 50%;
+    color: white;
+    font-size: 30px;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+  }
+
 
 /* CSS MAIN */
 
