--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body{
 /* CSS HEADER */
 
 header {
-  background-color: #0d2944;
+  background-color: #0c325a;
   height: 400px;
 
 }
@@ -27,7 +27,7 @@ header {
 nav {
   width: 100%;
   height: 60px;
-  background-color: #0d2944;
+  background-color: #0c325a;
   line-height: 60px;
   color: white;
   text-decoration: none;
@@ -82,16 +82,15 @@ nav a {
 /* CSS MAIN */
 
 .greysec {
-background-color: grey;
-height: 200px
+background-color: #d3d3d3;
+height: 150px;
+text-align: center;
+padding: 30px 0;
 
 }
 
 #offered-services, #find-level {
-
-background-color: green;
-height: 300px;
-
+padding: 30px 5%;
 }
 #offered-services::after, #find-level::after{
   content: "";
@@ -103,16 +102,32 @@ height: 300px;
   float: left;
   background-color: pink;
   width: 30%;
-  height: 300px;
+  text-align: center;
+  /* height: 500px; */
+
 }
 .card.center  {
   margin: 0 5%;
 }
 
+.card img {
+  height: 150px;
+  margin: 0 auto;
+}
+.card div {
+  padding: 10px;
+}
 .card-2{
   float: left;
   background-color: yellow;
   width: 40%;
-  height: 300px;
+  /* height: 300px; */
   margin-left: 5%;
+  text-align: center;
+  padding: 20px;
+}
+
+.card-2 img {
+  width: 80%;
+
 }
